# AnisoCADO

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.github_actions.txt  requirements.readthedocs.txt  requirements.travis.txt  setup.py
.github/: dependabot.yml  release.yml
.github/workflows/: markdown_link_check.yml  minimumdependencies.yml  replaceholder.yml  tests.yml
anisocado/: __init__.py  _anisocado.py  anisocado.py  make_ricoPupil.py  misc.py  psf.py  psf_utils.py  pupil.py  pupil_utils.py  scao_psf.py  stats.py  utils.py  version.py
anisocado/tests/: test_hello_world.py  test_playing_around.py  test_psf_functions.py  test_scao_psf.py
docs/: Makefile  codemeta.json  make.bat
docs/joss_paper/: full_text.md  ideas_for_paper.md  paper.bib  paper.md
docs/source/: GettingStarted.rst  PsfLibrary.rst  conf.py  index.rst
