[project]
name = "AnisoCADO"
version = "0.4.0a0"
description = "Generate off-axis SCAO PSFs for the ELT"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at"}
]
maintainers = [
    {name = "Kieran Leschinski", email="kieran.leschinski@unive.ac.at"},
    {name = "Hugo Buddelmeijer", email="hugo@buddelmeijer.nl"},
    {name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at"},
]
classifiers=[
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy (>=1.26.4,<2.0.0)",
    "astropy (>=6.1.7,<8.0.0)",
    "matplotlib (>=3.10.1,<3.11.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
black = "^25.1.0"
mypy = "^1.17.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-book-theme = "^1.1.3"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-apidoc = "^0.6.0"
sphinxcontrib-mermaid = "^1.0.0"


[project.urls]
"Homepage" = "https://anisocado.readthedocs.io/en/latest/"
"Source" = "https://github.com/AstarVienna/AnisoCADO/"
"Bug Reports" = "https://github.com/AstarVienna/AnisoCADO/issues"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
