[project]
name = "AnisoCADO"
version = "0.4.0"
description = "Generate off-axis SCAO PSFs for the ELT"
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = [ "astronomy" ]
dynamic = [ "classifiers" ]
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at"}
]
maintainers = [
    {name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at"},
    {name = "Hugo Buddelmeijer", email =" hugo@buddelmeijer.nl"},
    {name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at"},
]
dependencies = [
    "numpy (>=1.26.4,<2.3.0) ; python_version >= '3.10' and python_version < '3.13'",
    "numpy (>=2.2.6,<3.0.0) ; python_version >= '3.13'",

    "astropy (>=6.1.7,<8.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
]

[project.urls]
Repository = "https://github.com/AstarVienna/AnisoCADO/"
Documentation = "https://anisocado.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/AstarVienna/AnisoCADO/issues"
Changelog = "https://github.com/AstarVienna/AnisoCADO/releases"


[tool.poetry]
classifiers=[
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
black = "^25.1.0"
mypy = "^1.17.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-book-theme = "^1.1.3"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-apidoc = "^0.6.0"
sphinxcontrib-mermaid = "^1.0.0"
myst-nb = "^1.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
