[project]
name = "AnisoCADO"
version = "0.5.0"
description = "Generate off-axis SCAO PSFs for the ELT"
readme = "README.md"
requires-python = ">=3.10,<3.15"
keywords = [ "astronomy" ]
dynamic = [ "classifiers" ]
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at"}
]
maintainers = [
    {name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at"},
    {name = "Hugo Buddelmeijer", email =" hugo@buddelmeijer.nl"},
    {name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at"},
]
dependencies = [
    "numpy (>=1.26.4,<2.3.0) ; python_version >= '3.10' and python_version < '3.13'",
    "numpy (>=2.2.6,<3.0.0) ; python_version >= '3.13'",

    "astropy (>=6.1.7,<8.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
]

[project.urls]
Repository = "https://github.com/AstarVienna/AnisoCADO/"
Documentation = "https://anisocado.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/AstarVienna/AnisoCADO/issues"
Changelog = "https://github.com/AstarVienna/AnisoCADO/releases"


[tool.poetry]
classifiers=[
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.4"
black = "^25.12.0"
mypy = "^1.19.1"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-book-theme = "^1.1.4"
sphinx-copybutton = ">=0.5.2,<1.0"
sphinxcontrib-apidoc = ">=0.6.0,<1.0"
sphinxcontrib-mermaid = "^2.0"
myst-nb = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "webtest: marks tests as requiring network (deselect with '-m \"not webtest\"')",
]
filterwarnings = [
    "error",
    # Should fix at some point
    "ignore::ResourceWarning",
]

[tool.coverage.report]
omit = ["anisocado/tests/*", "docs/*"]
